# reflect

./: .gitignore  CMakeLists.txt
include/reflect/: deserialize.h  error.h  serde.h  serialize.h
src/: deserialize.cpp  serialize.cpp
test/: rttr_test.cpp
